syntax="proto3";

package wordsearch;

import "google/api/annotations.proto";

// Defines the import path that should 
//be used to import the generated package,
// and the package name.
option go_package = "github.com/RuNpiXelruN/word-search;wordsearch";

message SearchItem {
    string name = 1;
    int64 search_count = 2;
}

message SingleWordSearchRequest {
    string word = 1;
}

message SingleWordSearchResponse {
    string message = 1;
}

message UpdateSearchListRequest {
    string word = 1;    
}

message UpdateSearchListResponse {
    string message = 1;
    repeated SearchItem word_list = 2;
}

message TopFiveRequest {}

message TopFiveResponse {
    repeated SearchItem top_five = 1;
}

// validation package

service WordSearch {
    rpc SingleWordSearch (SingleWordSearchRequest) returns (SingleWordSearchResponse) {
        option(google.api.http) = {
            get: "/api/words"        
        };
    }

    rpc UpdateSearchList (UpdateSearchListRequest) returns (UpdateSearchListResponse) {
        option(google.api.http) = {
            post: "/api/words/{word}"
            body: "*"
        };        
    }

    rpc TopFiveSearchResults (TopFiveRequest) returns (TopFiveResponse) {
        option(google.api.http) = {
            get: "/api/words/popular",
        };
    }
}